@@ -157,5 +157,8 @@ comp-lzo
 # Set log file verbosity.
 verb 3
 
+# Explicitly notify disconnections
+explicit-exit-notify 3
+
 # Silence repeating messages
 ;mute 20
